--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>I am a title!</title>
 </head>
 <h1>I'm a Hacker1!</h1>
+<img src="https://octodex.github.com/images/vinyltocat.png">
     <body>
         The HTML content goes here.
     </body>
