--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
     <title>I am a title!</title>
 </head>
 <h1>I'm a Hacker1!</h1>
-<img src="https://octodex.github.com/images/vinyltocat.png">
+<img src="https://octodex.github.com/images/vinyltocat.png"> 
+
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+
     <body>
         The HTML content goes here.
     </body>
