--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
-
+    <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         The HTML content goes here.
     </body>
